--- a/autogpt/pyproject.toml
+++ b/autogpt/pyproject.toml
@@ -38,6 +38,7 @@ sentry-sdk = "^1.40.4"
 # Benchmarking
 agbenchmark = { path = "../benchmark", optional = true }
 # agbenchmark = {git = "https://github.com/Significant-Gravitas/AutoGPT.git", subdirectory = "benchmark", optional = true}
+google-generativeai = "^0.7.2"
 
 [tool.poetry.extras]
 benchmark = ["agbenchmark"]
